samples/_failures_safe/1761368489_508db8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b9ae474e.c: In function ‘tokenize_string’:
./samples/SAFE/__tmp_b9ae474e.c:156:9: error: expected declaration or statement at end of input
  156 |         tokenizer->input[tokenizer->position] == '"') {
      |         ^~~~~~~~~
./samples/SAFE/__tmp_b9ae474e.c:156:9: error: expected declaration or statement at end of input
